# chesser

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
src/: attacks.rs  bitboard.rs  board.rs  evaluation.rs  interface.rs  lib.rs  main.rs  move_generation.rs  moves.rs  perft.rs  piece.rs  position.rs  search.rs  square.rs  transposition_table.rs  zobrist_hash.rs
src/notchess/: mod.rs  num_format.rs
tests/: test_perft.rs  test_search.rs
