[package]
name = "chessier"
version = "0.1.0"
authors = ["Andrew Chien <aechien@gmail.com>"]
edition = "2018"

[[bin]]
name = "perft"
path = "src/bin/perft.rs"

[[bin]]
name = "magic_find"
path = "src/bin/magic_find.rs"

[[bin]]
name = "test_zobrist_hash"
path = "src/bin/test_zobrist_hash.rs"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.0"
lazy_static = "1.4.0"
num = "0.4"
num_enum = "0.5.1"
rand = "0.8.0"
rand_chacha = "0.3.0"
static_assertions = "1.1.0"

[target.'cfg(macos)'.dependencies]
jemallocator = "0.3.2"